--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "@angular-devkit/build-angular": "~0.901.12",
     "@angular/cli": "~9.1.12",
     "@angular/compiler-cli": "~9.1.12",
+    "@angular/language-service": "~9.1.1",
+    "@ngrx/schematics": "^10.0.1",
     "@nguniversal/builders": "^9.1.1",
     "@types/express": "^4.17.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -61,7 +63,6 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3",
-    "@angular/language-service": "~9.1.1",
-    "@ngrx/schematics": "^10.0.1"
+    "xmlhttprequest-ssl": "^1.6.0"
   }
 }
